--- a/CuisineRecipe/CuisineRecipe/Base.lproj/LaunchScreen.storyboard
+++ b/CuisineRecipe/CuisineRecipe/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,13 +17,45 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splashscreen" translatesAutoresizingMaskIntoConstraints="NO" id="gfh-Bj-b90">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="© Copyright by Sun*" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bdx-uV-T1y">
+                                <rect key="frame" x="120.5" y="638" width="134" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="kAa-24-Ecg">
+                                <rect key="frame" x="34.5" y="164" width="306" height="98"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="98" id="ARs-uV-7Pa"/>
+                                    <constraint firstAttribute="width" constant="306" id="mBb-9i-YTf"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="kAa-24-Ecg" firstAttribute="top" secondItem="gfh-Bj-b90" secondAttribute="top" constant="164" id="23b-3y-GJg"/>
+                            <constraint firstItem="gfh-Bj-b90" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="LN1-XK-K5p"/>
+                            <constraint firstItem="gfh-Bj-b90" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="N19-AG-2kn"/>
+                            <constraint firstItem="kAa-24-Ecg" firstAttribute="centerX" secondItem="gfh-Bj-b90" secondAttribute="centerX" id="WR3-D5-crH"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="gfh-Bj-b90" secondAttribute="bottom" id="YPg-5v-Tgm"/>
+                            <constraint firstItem="bdx-uV-T1y" firstAttribute="bottom" secondItem="gfh-Bj-b90" secondAttribute="bottom" constant="-12" id="g5A-0b-8do"/>
+                            <constraint firstItem="bdx-uV-T1y" firstAttribute="centerX" secondItem="gfh-Bj-b90" secondAttribute="centerX" id="hd3-G6-NEx"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="gfh-Bj-b90" secondAttribute="trailing" id="tbx-Ld-DeL"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="logo" width="361.5" height="102"/>
+        <image name="splashscreen" width="3024" height="3780"/>
+    </resources>
 </document>
