Task#11031 Fix Comment

--- a/CuisineRecipe/CuisineRecipe/Scenes/Storyboards/Base.lproj/Main.storyboard
+++ b/CuisineRecipe/CuisineRecipe/Scenes/Storyboards/Base.lproj/Main.storyboard
@@ -455,7 +455,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="171" height="254"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default_image" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BAr-w9-JYs" customClass="CustomImageView" customModule="CuisineRecipe" customModuleProvider="target">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default_image" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BAr-w9-JYs">
                                                     <rect key="frame" x="12" y="0.0" width="146" height="209"/>
                                                     <color key="backgroundColor" red="0.95283776519999996" green="0.95300072430000005" blue="0.95282751320000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <userDefinedRuntimeAttributes>
@@ -553,7 +553,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="171" height="254"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default_image" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="e3S-su-xHe" customClass="CustomImageView" customModule="CuisineRecipe" customModuleProvider="target">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default_image" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="e3S-su-xHe">
                                                     <rect key="frame" x="12" y="0.0" width="146" height="209"/>
                                                     <color key="backgroundColor" red="0.95283776519999996" green="0.95300072430000005" blue="0.95282751320000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <userDefinedRuntimeAttributes>
