--- a/CuisineRecipe/CuisineRecipe/Scenes/Storyboards/Base.lproj/Main.storyboard
+++ b/CuisineRecipe/CuisineRecipe/Scenes/Storyboards/Base.lproj/Main.storyboard
@@ -1043,6 +1043,9 @@
                                                         <color key="value" red="0.27450980390000002" green="0.27450980390000002" blue="0.27450980390000002" alpha="1" colorSpace="calibratedRGB"/>
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
+                                                <connections>
+                                                    <action selector="handleSnapTapped:" destination="NDS-CL-t1O" eventType="touchUpInside" id="Qnt-5z-sEt"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -1313,6 +1316,93 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jf1-OQ-2uB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3133.5999999999999" y="890.55472263868069"/>
+        </scene>
+        <!--Post picture-->
+        <scene sceneID="bqI-H5-0cU">
+            <objects>
+                <viewController storyboardIdentifier="ShareViewController" title="Post picture" hidesBottomBarWhenPushed="YES" id="pNm-4K-Cx8" customClass="ShareViewController" customModule="CuisineRecipe" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="FID-kU-hSL">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mlS-se-pS6">
+                                <rect key="frame" x="32" y="54" width="311" height="333"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MoJ-tb-PDw">
+                                <rect key="frame" x="32" y="419" width="311" height="100"/>
+                                <subviews>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="uvb-x8-qME">
+                                        <rect key="frame" x="8" y="8" width="295" height="84"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="textColor" red="0.27450980390000002" green="0.27450980390000002" blue="0.27450980390000002" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="no" spellCheckingType="no" returnKeyType="done" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
+                                    </textView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="uvb-x8-qME" firstAttribute="top" secondItem="MoJ-tb-PDw" secondAttribute="top" constant="8" id="FlS-Qp-fdY"/>
+                                    <constraint firstItem="uvb-x8-qME" firstAttribute="leading" secondItem="MoJ-tb-PDw" secondAttribute="leading" constant="8" id="VRJ-w8-eEf"/>
+                                    <constraint firstAttribute="trailing" secondItem="uvb-x8-qME" secondAttribute="trailing" constant="8" id="cJy-bo-uiH"/>
+                                    <constraint firstAttribute="height" constant="100" id="hsd-9B-8B1"/>
+                                    <constraint firstAttribute="bottom" secondItem="uvb-x8-qME" secondAttribute="bottom" constant="8" id="t1a-Wp-QYG"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                        <real key="value" value="0.5"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                        <color key="value" red="0.27450980390000002" green="0.27450980390000002" blue="0.27450980390000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S20-Oe-eK2">
+                                <rect key="frame" x="32" y="583" width="311" height="64"/>
+                                <color key="backgroundColor" red="1" green="0.8447751403" blue="0.21481692790000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="64" id="sWK-nY-F3Y"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="SHARE">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="handleShareButtonTapped:" destination="pNm-4K-Cx8" eventType="touchUpInside" id="0LF-Ea-pFq"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="S20-Oe-eK2" firstAttribute="top" secondItem="MoJ-tb-PDw" secondAttribute="bottom" constant="64" id="0qT-uA-jAA"/>
+                            <constraint firstItem="mlS-se-pS6" firstAttribute="top" secondItem="Yci-0x-xEF" secondAttribute="top" constant="34" id="5UV-qQ-AeZ"/>
+                            <constraint firstItem="mlS-se-pS6" firstAttribute="leading" secondItem="Yci-0x-xEF" secondAttribute="leading" constant="32" id="BWN-Bt-yse"/>
+                            <constraint firstItem="mlS-se-pS6" firstAttribute="centerX" secondItem="Yci-0x-xEF" secondAttribute="centerX" id="C8V-jU-801"/>
+                            <constraint firstItem="MoJ-tb-PDw" firstAttribute="top" secondItem="mlS-se-pS6" secondAttribute="bottom" constant="32" id="Wub-zP-CqG"/>
+                            <constraint firstItem="S20-Oe-eK2" firstAttribute="leading" secondItem="Yci-0x-xEF" secondAttribute="leading" constant="32" id="a7W-Mm-LPg"/>
+                            <constraint firstItem="Yci-0x-xEF" firstAttribute="trailing" secondItem="S20-Oe-eK2" secondAttribute="trailing" constant="32" id="bvu-se-ZbU"/>
+                            <constraint firstItem="Yci-0x-xEF" firstAttribute="trailing" secondItem="MoJ-tb-PDw" secondAttribute="trailing" constant="32" id="dpE-Ji-ZJy"/>
+                            <constraint firstItem="MoJ-tb-PDw" firstAttribute="leading" secondItem="Yci-0x-xEF" secondAttribute="leading" constant="32" id="eIq-vN-5fM"/>
+                            <constraint firstItem="Yci-0x-xEF" firstAttribute="bottom" secondItem="S20-Oe-eK2" secondAttribute="bottom" constant="20" id="yH9-R3-vO3"/>
+                            <constraint firstItem="Yci-0x-xEF" firstAttribute="trailing" secondItem="mlS-se-pS6" secondAttribute="trailing" constant="32" id="yko-jB-PW1"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Yci-0x-xEF"/>
+                    </view>
+                    <connections>
+                        <outlet property="achievementImageView" destination="mlS-se-pS6" id="aAV-3S-1qJ"/>
+                        <outlet property="descriptionTextView" destination="uvb-x8-qME" id="17n-E6-x9P"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ghR-OS-yay" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="6404" y="-35"/>
         </scene>
     </scenes>
     <resources>
